// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render as a primary button 1`] = `
<Button
  className="css-cimv5k "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-nil"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is explicitly defined 1`] = `
<Button
  className="css-kevfw8 "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-1391awe"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is omitted 1`] = `
<Button
  className="css-cimv5k "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-nil"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a secondary button 1`] = `
<Button
  className="css-187rja2 "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-nil"
  >
    Press me
  </div>
</Button>
`;
